HTML formatting w/ prettier

--- a/comparisons/index.html
+++ b/comparisons/index.html
@@ -4,94 +4,213 @@ title: AI Scribe Company Comparisons
 description: Compare AI scribe companies and find the best fit for your therapy and clinical needs. Compare features, pricing, and trials for 9+ AI documentation tools.
 ---
 
-    <div class="container">
-    <header class="title-container">
-        <div class=" title-content-centered">
-            <h1 class="main-title">AI Scribe Company <span style="text-decoration: underline;">Comparisons</span></h1>
-            <p class="main-subtitle">Compare AI scribe companies and find the best fit for your therapy and clinical documentation needs.</p>
-        </div>
-    </header>   
-
-    <section class="section table-section">
-        <h2 id="comparison-table" class="sr-only">Comparison Table</h2>
-        <iframe 
-            src="table.html" 
-            class="table-iframe"
-            title="AI Scribe Company Comparison Table"
-            loading="lazy"
-            id="comparisonTable"
-            aria-describedby="table-description"
-            scrolling="no"
-            ></iframe>
-        <p id="table-description" class="sr-only">Interactive comparison table showing features, pricing, and trial information for various AI scribe companies.</p>
-    </section>
-
-    <section class="section company-links container" aria-labelledby="company-details">
-        <h2 id="company-details" class="section-title-alt">AI Scribe Company Details</h2>
-        <div class="company-grid" role="list">
-
-        <article class="company-card" role="listitem">
-            <h3>ANTSA</h3>
-            <p>AI-powered therapy and clinical scribe tools with jAImee chatbot. Features 30-day free trial, Australian privacy compliance, and $59/month unlimited access.</p>
-            <a href="companies/antsa.html" class="company-button" aria-describedby="antsa-desc">See Full Response</a>
-            <span id="antsa-desc" class="sr-only">Learn more about ANTSA's AI scribe services and pricing</span>
-        </article>
-        
-        <article class="company-card" role="listitem">
-            <h3>BastionGPT</h3>
-            <p>AI assistant with ChatGPT ease but tailored for psychologists. 200+ healthcare use cases, evidence-based output, Australian privacy compliant. 30-day trial via Psychology Squared.</p>
-            <a href="companies/bastiongpt.html" class="company-button" aria-describedby="bastion-desc">See Full Response</a>
-            <span id="bastion-desc" class="sr-only">Learn more about BastionGPT's AI assistant for psychology professionals</span>
-        </article>
-
-        <article class="company-card" role="listitem">
-            <h3>Everbility</h3>
-            <p>Clinical documentation with extensive context and research integration. Supports long reports, PDF uploads, and unlimited customer support. $10 off first 3 months.</p>
-            <a href="companies/everbility.html" class="company-button" aria-describedby="ever-desc">See Full Response</a>
-            <span id="ever-desc" class="sr-only">Learn more about Everbility's research-integrated clinical documentation</span>
-        </article>
-
-        <article class="company-card" role="listitem">
-            <h3>Heidi Health</h3>
-            <p>AI-powered medical documentation with SOC2 and ISO27001 security. Multi-language support, PMS integrations, and dedicated telehealth platform. Free tier to $1299/year.</p>
-            <a href="companies/heidi.html" class="company-button" aria-describedby="heidi-desc">See Full Response</a>
-            <span id="heidi-desc" class="sr-only">Learn more about Heidi Health's secure AI medical documentation</span>
-        </article>
-
-        <article class="company-card" role="listitem">
-            <h3>NovoPsych (NovoNote)</h3>
-            <p>Mental health-specific AI scribe with psychometrics integration. 3-month free trial, template library by psychologists. Free until March 2025!</p>
-            <a href="companies/novopsych.html" class="company-button" aria-describedby="novo-desc">See Full Response</a>
-            <span id="novo-desc" class="sr-only">Learn more about NovoPsych's NovoNote AI scribe for mental health</span>
-        </article>
-
-        <article class="company-card" role="listitem">
-            <h3>Lyrebird Health</h3>
-            <p>AI medical scribe with advanced clinical documentation. Real-time transcription, clinical intelligence, and seamless workflow integration. 14-day free trial available.</p>
-            <a href="companies/lyrebird.html" class="company-button" aria-describedby="lyrebird-desc">See Full Response</a>
-            <span id="lyrebird-desc" class="sr-only">Learn more about Lyrebird Health's AI medical scribe with real-time transcription</span>
-        </article>
-
-        <article class="company-card" role="listitem">
-            <h3>Patient Notes</h3>
-            <p>AI-powered clinical documentation and note generation. Real-time transcription, clinical templates, and quality assurance features. 14-day free trial available.</p>
-            <a href="companies/patientnotes.html" class="company-button" aria-describedby="patient-desc">See Full Response</a>
-            <span id="patient-desc" class="sr-only">Learn more about Patient Notes' AI clinical documentation platform</span>
-        </article>
-
-        <article class="company-card" role="listitem">
-            <h3>UpliftGroup (UpLift AI)</h3>
-            <p>Fully AI-driven operating system combining AI therapy, practice management, and patient engagement. AI co-therapist for human-AI collaboration with open-ended early access.</p>
-            <a href="companies/upliftgroup.html" class="company-button" aria-describedby="uplift-desc">See Full Response</a>
-            <span id="uplift-desc" class="sr-only">Learn more about UpliftGroup's comprehensive AI therapy platform</span>
-        </article>
-
-        <article class="company-card" role="listitem">
-            <h3>Zanda Health (BizzyAI)</h3>
-            <p>AI-powered practice management with BizzyAI: Scribe for live session transcription. Thoughtfully-built for allied health practices with 14-day free trial including 3 hours of AI scribe.</p>
-            <a href="companies/zanda.html" class="company-button" aria-describedby="zanda-desc">See Full Response</a>
-            <span id="zanda-desc" class="sr-only">Learn more about Zanda Health's BizzyAI AI scribe services and pricing</span>
-        </article>
+<div class="container">
+  <header class="title-container">
+    <div class="title-content-centered">
+      <h1 class="main-title">
+        AI Scribe Company
+        <span style="text-decoration: underline">Comparisons</span>
+      </h1>
+      <p class="main-subtitle">
+        Compare AI scribe companies and find the best fit for your therapy and
+        clinical documentation needs.
+      </p>
     </div>
-    </section>
+  </header>
+
+  <section class="section table-section">
+    <h2 id="comparison-table" class="sr-only">Comparison Table</h2>
+    <iframe
+      src="table.html"
+      class="table-iframe"
+      title="AI Scribe Company Comparison Table"
+      loading="lazy"
+      id="comparisonTable"
+      aria-describedby="table-description"
+      scrolling="no"
+    ></iframe>
+    <p id="table-description" class="sr-only">
+      Interactive comparison table showing features, pricing, and trial
+      information for various AI scribe companies.
+    </p>
+  </section>
+
+  <section
+    class="section company-links container"
+    aria-labelledby="company-details"
+  >
+    <h2 id="company-details" class="section-title-alt">
+      AI Scribe Company Details
+    </h2>
+    <div class="company-grid" role="list">
+      <article class="company-card" role="listitem">
+        <h3>ANTSA</h3>
+        <p>
+          AI-powered therapy and clinical scribe tools with jAImee chatbot.
+          Features 30-day free trial, Australian privacy compliance, and
+          $59/month unlimited access.
+        </p>
+        <a
+          href="companies/antsa.html"
+          class="company-button"
+          aria-describedby="antsa-desc"
+          >See Full Response</a
+        >
+        <span id="antsa-desc" class="sr-only"
+          >Learn more about ANTSA's AI scribe services and pricing</span
+        >
+      </article>
+
+      <article class="company-card" role="listitem">
+        <h3>BastionGPT</h3>
+        <p>
+          AI assistant with ChatGPT ease but tailored for psychologists. 200+
+          healthcare use cases, evidence-based output, Australian privacy
+          compliant. 30-day trial via Psychology Squared.
+        </p>
+        <a
+          href="companies/bastiongpt.html"
+          class="company-button"
+          aria-describedby="bastion-desc"
+          >See Full Response</a
+        >
+        <span id="bastion-desc" class="sr-only"
+          >Learn more about BastionGPT's AI assistant for psychology
+          professionals</span
+        >
+      </article>
+
+      <article class="company-card" role="listitem">
+        <h3>Everbility</h3>
+        <p>
+          Clinical documentation with extensive context and research
+          integration. Supports long reports, PDF uploads, and unlimited
+          customer support. $10 off first 3 months.
+        </p>
+        <a
+          href="companies/everbility.html"
+          class="company-button"
+          aria-describedby="ever-desc"
+          >See Full Response</a
+        >
+        <span id="ever-desc" class="sr-only"
+          >Learn more about Everbility's research-integrated clinical
+          documentation</span
+        >
+      </article>
+
+      <article class="company-card" role="listitem">
+        <h3>Heidi Health</h3>
+        <p>
+          AI-powered medical documentation with SOC2 and ISO27001 security.
+          Multi-language support, PMS integrations, and dedicated telehealth
+          platform. Free tier to $1299/year.
+        </p>
+        <a
+          href="companies/heidi.html"
+          class="company-button"
+          aria-describedby="heidi-desc"
+          >See Full Response</a
+        >
+        <span id="heidi-desc" class="sr-only"
+          >Learn more about Heidi Health's secure AI medical documentation</span
+        >
+      </article>
+
+      <article class="company-card" role="listitem">
+        <h3>NovoPsych (NovoNote)</h3>
+        <p>
+          Mental health-specific AI scribe with psychometrics integration.
+          3-month free trial, template library by psychologists. Free until
+          March 2025!
+        </p>
+        <a
+          href="companies/novopsych.html"
+          class="company-button"
+          aria-describedby="novo-desc"
+          >See Full Response</a
+        >
+        <span id="novo-desc" class="sr-only"
+          >Learn more about NovoPsych's NovoNote AI scribe for mental
+          health</span
+        >
+      </article>
+
+      <article class="company-card" role="listitem">
+        <h3>Lyrebird Health</h3>
+        <p>
+          AI medical scribe with advanced clinical documentation. Real-time
+          transcription, clinical intelligence, and seamless workflow
+          integration. 14-day free trial available.
+        </p>
+        <a
+          href="companies/lyrebird.html"
+          class="company-button"
+          aria-describedby="lyrebird-desc"
+          >See Full Response</a
+        >
+        <span id="lyrebird-desc" class="sr-only"
+          >Learn more about Lyrebird Health's AI medical scribe with real-time
+          transcription</span
+        >
+      </article>
+
+      <article class="company-card" role="listitem">
+        <h3>Patient Notes</h3>
+        <p>
+          AI-powered clinical documentation and note generation. Real-time
+          transcription, clinical templates, and quality assurance features.
+          14-day free trial available.
+        </p>
+        <a
+          href="companies/patientnotes.html"
+          class="company-button"
+          aria-describedby="patient-desc"
+          >See Full Response</a
+        >
+        <span id="patient-desc" class="sr-only"
+          >Learn more about Patient Notes' AI clinical documentation
+          platform</span
+        >
+      </article>
+
+      <article class="company-card" role="listitem">
+        <h3>UpliftGroup (UpLift AI)</h3>
+        <p>
+          Fully AI-driven operating system combining AI therapy, practice
+          management, and patient engagement. AI co-therapist for human-AI
+          collaboration with open-ended early access.
+        </p>
+        <a
+          href="companies/upliftgroup.html"
+          class="company-button"
+          aria-describedby="uplift-desc"
+          >See Full Response</a
+        >
+        <span id="uplift-desc" class="sr-only"
+          >Learn more about UpliftGroup's comprehensive AI therapy
+          platform</span
+        >
+      </article>
+
+      <article class="company-card" role="listitem">
+        <h3>Zanda Health (BizzyAI)</h3>
+        <p>
+          AI-powered practice management with BizzyAI: Scribe for live session
+          transcription. Thoughtfully-built for allied health practices with
+          14-day free trial including 3 hours of AI scribe.
+        </p>
+        <a
+          href="companies/zanda.html"
+          class="company-button"
+          aria-describedby="zanda-desc"
+          >See Full Response</a
+        >
+        <span id="zanda-desc" class="sr-only"
+          >Learn more about Zanda Health's BizzyAI AI scribe services and
+          pricing</span
+        >
+      </article>
+    </div>
+  </section>
 </div>
