--- a/faq/index.html
+++ b/faq/index.html
@@ -19,10 +19,15 @@ subnav:
 
 <!-- Header -->
 <header class="title-container">
-    <div class="title-content title-content-centered">
-      <h1 class="main-title main-title-accent">Frequently Asked <span class="main-title">Questions</span></h1>
-      <p class="main-subtitle">Straightforward answers about our services, ethics, compliance, and learning resources.</p>
-    </div>
+  <div class="title-content title-content-centered">
+    <h1 class="main-title main-title-accent">
+      Frequently Asked <span class="main-title">Questions</span>
+    </h1>
+    <p class="main-subtitle">
+      Straightforward answers about our services, ethics, compliance, and
+      learning resources.
+    </p>
+  </div>
 </header>
 
 <section id="general" class="section">
@@ -30,17 +35,25 @@ subnav:
     <h2 class="section-title">General</h2>
     <div class="content-container">
       <article class="content-section">
-          <summary class="content-info-header-alt">Who is David Lopis and what is his background in AI and mental health?</summary>
-          <div class="content-section-text">
-            David is an Australian registered psychologist, AI consultant, and board‑approved supervisor. He leads Psychology Squared (3,500+ clinicians) and has presented/trained with APS, AAPi, and ACPA. Learn more on <a href="/services/">Services</a>.
-          </div>
+        <summary class="content-info-header-alt">
+          Who is David Lopis and what is his background in AI and mental health?
+        </summary>
+        <div class="content-section-text">
+          David is an Australian registered psychologist, AI consultant, and
+          board‑approved supervisor. He leads Psychology Squared (3,500+
+          clinicians) and has presented/trained with APS, AAPi, and ACPA. Learn
+          more on <a href="/services/">Services</a>.
+        </div>
       </article>
 
       <article class="content-section">
-          <summary class="content-info-header-alt">Do you provide services outside Australia or virtually?</summary>
-          <div class="content-section-text">
-            Yes. Virtual/online sessions are available. In‑person and hybrid formats can be arranged depending on needs.
-          </div>
+        <summary class="content-info-header-alt">
+          Do you provide services outside Australia or virtually?
+        </summary>
+        <div class="content-section-text">
+          Yes. Virtual/online sessions are available. In‑person and hybrid
+          formats can be arranged depending on needs.
+        </div>
       </article>
     </div>
   </div>
@@ -51,44 +64,65 @@ subnav:
     <h2 class="section-title">Services and Booking</h2>
     <div class="content-container">
       <article class="content-section">
-          <summary class="content-info-header-alt">What kinds of services do you offer?</summary>
-          <div class="content-section-text">
-            • Individual AI consultation<br>
-            • Group training and workshops<br>
-            • Speaking engagements and keynotes<br>
-            • AI Compliance Pack (templates and guidance)<br>
-            • Company collaborations (product reviews and ongoing assistance)<br>
-            See <a href="/services/">Services</a> and <a href="/compliance/">Compliance Pack</a>.
-          </div>
-        </details>
+        <summary class="content-info-header-alt">
+          What kinds of services do you offer?
+        </summary>
+        <div class="content-section-text">
+          • Individual AI consultation<br />
+          • Group training and workshops<br />
+          • Speaking engagements and keynotes<br />
+          • AI Compliance Pack (templates and guidance)<br />
+          • Company collaborations (product reviews and ongoing assistance)<br />
+          See <a href="/services/">Services</a> and
+          <a href="/compliance/">Compliance Pack</a>.
+        </div>
       </article>
 
       <article class="content-section">
-          <summary class="content-info-header-alt">What information do I need to provide when booking?</summary>
-          <div class="content-section-text">
-            Name, email, organisation, role, expected group size, preferred dates, budget (optional), location/format (in‑person/virtual/hybrid), and any specific topics or additional info. You can start from <a href="/services/#pricing">our booking options</a>.
-          </div>
+        <summary class="content-info-header-alt">
+          What information do I need to provide when booking?
+        </summary>
+        <div class="content-section-text">
+          Name, email, organisation, role, expected group size, preferred dates,
+          budget (optional), location/format (in‑person/virtual/hybrid), and any
+          specific topics or additional info. You can start from
+          <a href="/services/#pricing">our booking options</a>.
+        </div>
       </article>
 
       <article class="content-section">
-          <summary class="content-info-header-alt">Do you offer tailored workshops for different professional groups?</summary>
-          <div class="content-section-text">
-            Yes. Examples include AI Basics for Clinicians, AI for Social Workers, and Social Media & AI for Psychologists. Sessions are tailored to your context.
-          </div>
+        <summary class="content-info-header-alt">
+          Do you offer tailored workshops for different professional groups?
+        </summary>
+        <div class="content-section-text">
+          Yes. Examples include AI Basics for Clinicians, AI for Social Workers,
+          and Social Media & AI for Psychologists. Sessions are tailored to your
+          context.
+        </div>
       </article>
 
       <article class="content-section">
-          <summary class="content-info-header-alt">What topics do you cover in talks and workshops?</summary>
-          <div class="content-section-text">
-            Getting started with AI in practice, ethical use and governance, AI tool demonstrations, social media and AI for psychologists, and discipline‑specific trainings.
-          </div>
+        <summary class="content-info-header-alt">
+          What topics do you cover in talks and workshops?
+        </summary>
+        <div class="content-section-text">
+          Getting started with AI in practice, ethical use and governance, AI
+          tool demonstrations, social media and AI for psychologists, and
+          discipline‑specific trainings.
+        </div>
       </article>
 
       <article class="content-section">
-          <summary class="content-info-header-alt">Do you consult with companies on product development and positioning?</summary>
-          <div class="content-section-text">
-            Yes. Our Product Review includes tool trial, debrief, 1‑month follow‑up, and written recommendations. Ongoing Assistance covers planning, implementation, governance, and risk management. See <a href="/services/#pricing">Company Consulting and Collaborations</a>.
-          </div>
+        <summary class="content-info-header-alt">
+          Do you consult with companies on product development and positioning?
+        </summary>
+        <div class="content-section-text">
+          Yes. Our Product Review includes tool trial, debrief, 1‑month
+          follow‑up, and written recommendations. Ongoing Assistance covers
+          planning, implementation, governance, and risk management. See
+          <a href="/services/#pricing">Company Consulting and Collaborations</a
+          >.
+        </div>
       </article>
     </div>
   </div>
@@ -99,31 +133,49 @@ subnav:
     <h2 class="section-title">Ethics, Compliance, and Legal</h2>
     <div class="content-container">
       <article class="content-section">
-          <summary class="content-info-header-alt">How do you address ethics?</summary>
-          <div class="content-section-text">
-            We align with the Australian AI Ethics principles and professional competencies, emphasising transparency, accountability, privacy, and safety. See <a href="/standards/">AI Ethical Standards</a>.
-          </div>
+        <summary class="content-info-header-alt">
+          How do you address ethics?
+        </summary>
+        <div class="content-section-text">
+          We align with the Australian AI Ethics principles and professional
+          competencies, emphasising transparency, accountability, privacy, and
+          safety. See <a href="/standards/">AI Ethical Standards</a>.
+        </div>
       </article>
 
       <article class="content-section">
-          <summary class="content-info-header-alt">What is the AI Compliance Pack?</summary>
-          <div class="content-section-text">
-            A ready‑to‑use set of templates and guidance drafted by PGC Legal Pty Ltd: AI Policy, Privacy Policy, Consent Form for AI use, Implementation Checklist, and transcript inclusion guidance. Instant access after purchase. See <a href="/compliance/">AI Compliance Pack</a>.
-          </div>
+        <summary class="content-info-header-alt">
+          What is the AI Compliance Pack?
+        </summary>
+        <div class="content-section-text">
+          A ready‑to‑use set of templates and guidance drafted by PGC Legal Pty
+          Ltd: AI Policy, Privacy Policy, Consent Form for AI use,
+          Implementation Checklist, and transcript inclusion guidance. Instant
+          access after purchase. See
+          <a href="/compliance/">AI Compliance Pack</a>.
+        </div>
       </article>
 
       <article class="content-section">
-          <summary class="content-info-header-alt">Who is the AI Compliance Pack for?</summary>
-          <div class="content-section-text">
-            Psychologists using or planning to use AI. Individual licence is $199 (inc GST); practice bundles available on request.
-          </div>
+        <summary class="content-info-header-alt">
+          Who is the AI Compliance Pack for?
+        </summary>
+        <div class="content-section-text">
+          Psychologists using or planning to use AI. Individual licence is $199
+          (inc GST); practice bundles available on request.
+        </div>
       </article>
 
       <article class="content-section">
-          <summary class="content-info-header-alt">Is the Compliance Pack legal advice? What are the limitations?</summary>
-          <div class="content-section-text">
-            The content is informational, not legal advice, and comes with limitations of liability. Using it does not create a solicitor‑client relationship. See <a href="/compliance/#legal">Important Legal Information</a>.
-          </div>
+        <summary class="content-info-header-alt">
+          Is the Compliance Pack legal advice? What are the limitations?
+        </summary>
+        <div class="content-section-text">
+          The content is informational, not legal advice, and comes with
+          limitations of liability. Using it does not create a solicitor‑client
+          relationship. See
+          <a href="/compliance/#legal">Important Legal Information</a>.
+        </div>
       </article>
     </div>
   </div>
@@ -134,26 +186,35 @@ subnav:
     <h2 class="section-title">Speaking, Media, and Community</h2>
     <div class="content-container">
       <article class="content-section">
-          <summary class="content-info-header-alt">Do you do keynotes at conferences?</summary>
-          <div class="content-section-text">
-            Yes. Examples include APS, AAPi, ACPA events, and ASAICP Symposium 2025. See <a href="/services/#speaking">Speaking & Events</a>.
-          </div>
+        <summary class="content-info-header-alt">
+          Do you do keynotes at conferences?
+        </summary>
+        <div class="content-section-text">
+          Yes. Examples include APS, AAPi, ACPA events, and ASAICP Symposium
+          2025. See <a href="/services/#speaking">Speaking & Events</a>.
+        </div>
       </article>
 
       <article class="content-section">
-          <summary class="content-info-header-alt">Where can I hear or watch your interviews and presentations?</summary>
-          <div class="content-section-text">
-            • Mastering Therapy Podcast: “Using AI in Your Therapy Practice (Part 2)”<br>
-            • YouTube: “ChatGPT and Beyond: AI’s Impact on Psychology”<br>
-            Links on <a href="/services/#media">Media & Interviews</a>.
-          </div>
+        <summary class="content-info-header-alt">
+          Where can I hear or watch your interviews and presentations?
+        </summary>
+        <div class="content-section-text">
+          • Mastering Therapy Podcast: “Using AI in Your Therapy Practice (Part
+          2)”<br />
+          • YouTube: “ChatGPT and Beyond: AI’s Impact on Psychology”<br />
+          Links on <a href="/services/#media">Media & Interviews</a>.
+        </div>
       </article>
 
       <article class="content-section">
-          <summary class="content-info-header-alt">Is there a community I can join to learn about AI in psychology?</summary>
-          <div class="content-section-text">
-            Yes. Join the “Australian Psychology AI Community” Facebook group. See <a href="/compliance/#contact">Contact Information</a>.
-          </div>
+        <summary class="content-info-header-alt">
+          Is there a community I can join to learn about AI in psychology?
+        </summary>
+        <div class="content-section-text">
+          Yes. Join the “Australian Psychology AI Community” Facebook group. See
+          <a href="/compliance/#contact">Contact Information</a>.
+        </div>
       </article>
     </div>
   </div>
@@ -164,10 +225,13 @@ subnav:
     <h2 class="section-title">Choosing AI Tools</h2>
     <div class="content-container">
       <article class="content-section">
-          <summary class="content-info-header-alt">Do you compare AI tools for clinicians?</summary>
-          <div class="content-section-text">
-            Yes. See our overview of AI scribe companies, including features, pricing, and trials on <a href="/comparisons/">Comparisons</a>.
-          </div>
+        <summary class="content-info-header-alt">
+          Do you compare AI tools for clinicians?
+        </summary>
+        <div class="content-section-text">
+          Yes. See our overview of AI scribe companies, including features,
+          pricing, and trials on <a href="/comparisons/">Comparisons</a>.
+        </div>
       </article>
     </div>
   </div>
@@ -176,7 +240,9 @@ subnav:
 <section id="contact" class="section section-alt bg5">
   <div class="container center">
     <h2 class="section-title">Need something specific?</h2>
-    <p class="section-subtitle">Tell us your goals and context, and we’ll recommend the best approach.</p>
+    <p class="section-subtitle">
+      Tell us your goals and context, and we’ll recommend the best approach.
+    </p>
     <a class="btn" href="/services/#pricing">Book or request a quote</a>
   </div>
 </section>
