Professional services heading on dashboard

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@ description: Building effective and responsible AI use in clinical practice.
     >
   </div>
   <section class="section-border">
+    <h2 id="services-heading" class="section-title-alt">
+      Professional Services
+    </h2>
     <a
       href="/services/"
       class="link-button"
