Vertical sub-nav

--- a/compliance/index.html
+++ b/compliance/index.html
@@ -175,7 +175,7 @@ subnav:
 
 <!-- Legal Disclaimers -->
 <section id="legal" class="section bg4">
-  <div class="container">
+  <div class="container container-short">
     <h2 class="section-title">Important Legal Information</h2>
     <div class="content-container">
       <div class="content-section">
