--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@ title: AI for Clinicians
 description: Building effective and responsible AI use in clinical practice.
 ---
 
+<img
+  src="{{ '/assets/images/logo.png' | relative_url }}"
+  alt="AI for Clinicians logo"
+  width="240"
+  height="240"
+  decoding="async"
+  loading="lazy"
+  class="dashboard-logo"
+/>
 <div class="dashboard-container container">
   <div class="dashboard-header-container">
     <header class="dashboard-header">
@@ -12,14 +21,6 @@ description: Building effective and responsible AI use in clinical practice.
         Building effective and responsible AI use in clinical practice
       </p>
     </header>
-    <img
-      src="{{ '/assets/images/logo.png' | relative_url }}"
-      alt="AI for Clinicians logo"
-      width="240"
-      height="240"
-      decoding="async"
-      loading="lazy"
-    />
   </div>
 
   <div style="text-align: center">
