--- a/services/index.html
+++ b/services/index.html
@@ -13,7 +13,7 @@ subnav:
     href: "#pricing"
 ---
 
-<header id="home" class="title-container">
+<header id="home" class="title-container container-short">
   <div class="container container-alt">
     <div class="title-content">
       <h1 class="main-title main-title-accent">
@@ -37,7 +37,7 @@ subnav:
 </header>
 <!-- About Section -->
 <section id="about" class="section bg1">
-  <div class="container">
+  <div class="container container-short">
     <h2 class="section-title">
       About <span class="section-title-accent">David Lopis</span>
     </h2>
@@ -94,9 +94,9 @@ subnav:
 
 <!-- Speaking & Events Section -->
 <section id="speaking" class="section bg2">
-  <div class="container">
+  <div class="container container-short">
     <h2 class="section-title">
-      Speaking & <span class="section-title-accent">Events</span>
+      Speaking and <span class="section-title-accent">Events</span>
     </h2>
     <p class="section-subtitle">
       Leading AI training and thought leadership across Australia's top
@@ -170,9 +170,9 @@ subnav:
 
 <!-- Media Section -->
 <section id="media" class="section bg3">
-  <div class="container">
+  <div class="container container-short" style="max-width: 800px">
     <h2 class="section-title">
-      Media & <span class="section-title-accent">Interviews</span>
+      Media and <span class="section-title-accent">Interviews</span>
     </h2>
     <p class="section-subtitle">
       Featured insights on AI in psychology across podcasts and industry
@@ -228,7 +228,7 @@ subnav:
 
 <!-- Services Section -->
 <section id="services" class="section bg4">
-  <div class="container">
+  <div class="container container-short">
     <h2 class="section-title">
       Our <span class="section-title-accent">Services</span>
     </h2>
@@ -452,7 +452,10 @@ subnav:
 </section>
 
 <!-- Contact Form Modal -->
-<dialog id="booking-modal-container" class="booking-modal-container">
+<dialog
+  id="booking-modal-container container-short"
+  class="booking-modal-container container-short"
+>
   <div id="booking-modal" class="booking-modal">
     <button
       onclick="closeBookingForm()"
