--- a/index.html
+++ b/index.html
@@ -24,14 +24,11 @@ description: Building effective and responsible AI use in clinical practice.
   </div>
 
   <div style="text-align: center">
-    <a
-      href="/services/#pricing"
-      target="_blank"
-      rel="noopener noreferrer"
+    <button
+      onclick="openBookingForm()"
       aria-label="Book a Consultation"
       class="book-now"
-      >Book Now</a
-    >
+      >Book Now</button>
   </div>
   <section class="section-border">
     <h2 id="services-heading" class="section-title-alt">
