No dashboard, header-nav reformatted

--- a/comparisons/index.html
+++ b/comparisons/index.html
@@ -39,7 +39,7 @@ description: Compare AI scribe companies and find the best fit for your therapy 
     class="section company-links container"
     aria-labelledby="company-details"
   >
-    <h2 id="company-details" class="section-title-alt">
+    <h2 id="company-details" class="section-title">
       AI Scribe Company Details
     </h2>
     <div class="company-grid" role="list">
