--- a/contact/index.html
+++ b/contact/index.html
@@ -16,11 +16,10 @@ description: Get in touch with AI for Clinicians for speaking engagements, AI co
 </header>
 
 <!-- Consultancy Booking -->
-<section id="consultancy" class="section bg2">
+<section id="consultancy" class="section gap-2 bg2">
   <h2 class="section-title">
     Book <span class="section-title-accent">a Consultancy</span>
   </h2>
-  <div class="footer-content">
     <div class="card">
       <iframe
         id="cliniko-1hr"
@@ -45,7 +44,6 @@ description: Get in touch with AI for Clinicians for speaking engagements, AI co
         style="pointer-events: auto; height: 364px"
       ></iframe>
     </div>
-  </div>
 </section>
 
 <!-- Contact Section -->
