Download button reformatted for Standard PDF

--- a/standards/index.html
+++ b/standards/index.html
@@ -12,6 +12,7 @@ description: AI Ethical Standards for Australian Psychology professionals and tr
       class="btn"
       aria-label="Download PDF version"
       onclick="downloadPDF()"
+      style="max-width: 200px; margin: 0 auto;"
     >
       <svg class="icon icon-sm" viewBox="0 0 24 24" aria-hidden="true">
         <path
