bookings on contact page

--- a/contact/index.html
+++ b/contact/index.html
@@ -15,6 +15,11 @@ description: Get in touch with AI for Clinicians for speaking engagements, AI co
   </div>
 </header>
 
+<button onclick="openBookingForm()" class="hero-cta mb-2">
+  <span>BOOK NOW</span>
+  <small class="hero-cta-subtitle">Transform Your Practice</small>
+</button>
+
 <!-- Consultancy Booking -->
 <section id="consultancy" class="section gap-2 bg2">
   <h2 class="section-title">
@@ -23,7 +28,7 @@ description: Get in touch with AI for Clinicians for speaking engagements, AI co
     <div class="card">
       <iframe
         id="cliniko-1hr"
-        src="https://psychology-squared.au2.cliniko.com/bookings?appointment_type_id=1592378017823333210&amp;embedded=true#service"
+        src="https://psychology-squared.au2.cliniko.com/bookings?appointment_type_id=1535997143150499859&amp;embedded=true#service"
         frameborder="0"
         scrolling="auto"
         width="876px"
@@ -35,7 +40,7 @@ description: Get in touch with AI for Clinicians for speaking engagements, AI co
     <div class="card">
       <iframe
         id="cliniko-1hr"
-        src="https://psychology-squared.au2.cliniko.com/bookings?appointment_type_id=1672953693663665044&amp;embedded=true#service"
+        src="https://psychology-squared.au2.cliniko.com/bookings?appointment_type_id=1309110159544424981&amp;embedded=true#service"
         frameborder="0"
         scrolling="auto"
         width="876px"
