comparisons table uplift

--- a/comparisons/table.html
+++ b/comparisons/table.html
@@ -157,7 +157,7 @@
       }
 
       .comparison-table th:first-child {
-        text-align: left;
+        text-align: center;
         background: var(--bg-secondary);
         min-width: 180px;
         width: 180px;
@@ -377,8 +377,8 @@
         border: none;
         color: var(--text-accent);
         cursor: pointer;
-        font-size: 12px;
-        font-weight: 600;
+        font-size: 18px;
+        font-weight: bold;
         padding: 4px 8px;
         margin-top: 8px;
         border-radius: 4px;
